# osgswig

./: AUTHORS.txt  CMakeLists.txt  COPYING.txt  LICENSE.txt  README  README.txt
CMakeModules/: FindBoostPython.cmake  FindOSG.cmake  FindOSGART.cmake  FindOSGODE.cmake  FindOSGPPU.cmake  FindOSGVERSE.cmake  FindOpenThreads.cmake  ModuleInstall.cmake  OSGSWIGMacros.cmake  OsgMacroUtils.cmake  parse_OSG_version.cmake
data/: rulers.osg  xyz.osg
doc/: NOTES.txt
doc/java/: java.dox
doc/python/: python.dox
etc/: csharp.lua  globals.lua  parse_introspection.py  premake.lua  python.lua  ruby.lua
etc/distribution/mac/: osgPython.pmproj
etc/distribution/win32/: osgJava.iss  osgLua.iss  osgPython.iss  osgRuby.iss
examples/java/osgart/: compile.bat  main.java  run.bat
examples/java/viewer/: compile.bat  main.java  run.bat
examples/lua/: osgart.lua  viewer.lua
examples/python/: dynamicosg.py  gtkosgwidget.py  nodevisitor.py  osgart.py  osgartsimple.py  osgidentify.py  osgintrospection.py  osgppuviewer.py  osgprerender.py  osgviewerGTK.py  osgviewerPySide.py  osgviewerQt4.py  osgviewerWX.py  pickosg.py  pickosgdirector.py  pyramid.py  pyramid_mixinvector.py  simpleosg.py  skinning.py  todaysimages.py  typetest.py  viewer.py  vrpnviewer.py  wx_viewer.pyw
examples/python/simple/: dynamicosg.py  pickosg.py  simpleosg.py
examples/ruby/: osgart.rb  simple_gtk.rb  viewer.rb
sandbox/: animation.py  env.sh  sequence.py  test.py
src/: CMakeLists.txt  GL.i  OpenThreads.i  Producer.i  globals.i  osg.i  osgART.i  osgAnimation.i  osgAnimation_new.i  osgDB.i  osgFX.i  osgGA.i  osgGA_header.i  osgIntrospection.i  osgManipulator.i  osgPPU.i  osgParticle.i  osgProducer.i  osgPyExtend.i  osgShadow.i  osgSim.i  osgTerrain.i  osgText.i  osgUtil.i  osgVRPN.i  osgViewer.i  osgViewer_header.i  osg_Drawable.i  osg_GraphicsContext.i  osg_GraphicsContext_header.i  osg_header.i
src/Languages/C#/: wrap.bat
src/Languages/Java/: compile.bat  package.bat  wrap.bat
src/Languages/Lua/: compile.sh  wrap.bat  wrap.sh
src/Languages/Python/: compile.mac.sh  compile.sh  wrap.bat  wrap.mac.sh  wrap.sh
src/Languages/Ruby/: compile.sh  wrap.bat  wrap.sh
src/java/: CMakeLists.txt  argv.i
src/osgScript/: VirtualMachine.cpp
src/osg_patches/2.9.5/: Array  PrimitiveSet
src/perl/: CMakeLists.txt  osg.i  osgDB.i  osgGA.i  osgUtil.i  osgViewer.i
src/python/: CMakeLists.txt  __init__.py  osg.pth.in  osgART.i  osgAnimation.i  osgFX.i  osgGA.i  osgIntrospection.i  osgManipulator.i  osgPPU.i  osgShadow.i  osgSim.i  osgText.i  osgUtil.i  osgViewer.i  setup.py
wiki/: InstallationWindows.wiki
