##---------------------------------------------------------------------------
## CMakeLists.txt - The VRmeer Library - Delft University of Technology
##
##---------------------------------------------------------------------------
## Created by René Molenaar - Aug 2007
## 
## osg python bindings
##---------------------------------------------------------------------------
FIND_PACKAGE(OpenThreads REQUIRED) 
FIND_PACKAGE(SWIG REQUIRED)

# Build a swig module for python
INCLUDE(${SWIG_USE_FILE})

# Our own Macros
INCLUDE(OSGSWIGMacros)

MACRO(FAKE_INCLUDE_FROM_FRAMEWORK FRAMEWORK_NAME FRAME_WORK_ROOT TARGET_ROOT)
	EXEC_PROGRAM("ln -s ${FRAME_WORK_ROOT}/Headers ${TARGET_ROOT}/${FRAMEWORK_NAME}" )
ENDMACRO(FAKE_INCLUDE_FROM_FRAMEWORK FRAMEWORK_NAME FRAME_WORK_ROOT TARGET_ROOT)

## additional include directories
IF(NOT APPLE)
	INCLUDE_DIRECTORIES(
		${OSG_INCLUDE_DIR}
	)
# dealing with frameworks on Mac OS X
ELSE(NOT APPLE)
	SET(FAKE_INCLUDE_PATH ${CMAKE_BINARY_DIR}/include)
	FILE(MAKE_DIRECTORY ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osg ${OSG_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgUtil ${OSGUTIL_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgDB ${OSGDB_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgGA ${OSGGA_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgManipulator ${OSGMANIPULATOR_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgFX ${OSGFX_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgText ${OSGTEXT_LIBRARY} ${FAKE_INCLUDE_PATH})
	FAKE_INCLUDE_FROM_FRAMEWORK(osgViewer ${OSGVIEWER_LIBRARY} ${FAKE_INCLUDE_PATH})
	INCLUDE_DIRECTORIES(${FAKE_INCLUDE_PATH})
ENDIF(NOT APPLE)



FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(
	${PYTHON_INCLUDE_PATH}
)

##set and create the output dir
SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib/python)
MAKE_DIRECTORY(${OUTPUT_LIBDIR})
SET(LIBRARY_OUTPUT_PATH ${OUTPUT_LIBDIR})
SET(CMAKE_SWIG_OUTDIR ${OUTPUT_LIBDIR})

SET(CMAKE_CURRENT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/")

CONFIGURE_FILE(
	osg.pth.in
	${OUTPUT_LIBDIR}/osg.pth
)


SET_SOURCE_FILES_PROPERTIES(
	osg.i osgUtil.i osgFX.i osgDB.i osgGA.i osgText.i osgViewer.i osgManipulator.i 
	PROPERTIES CPLUSPLUS TRUE)
	
SET_SOURCE_FILES_PROPERTIES(osg.i PROPERTIES SWIG_FLAGS "-make_default")

SET(SWIGLINKLIBS ${OSG_LIBRARY} ${PYTHON_LIBRARIES} ${OPENTHREADS_LIBRARY} ${OPENGL_LIBRARIES})

SWIG_ADD_MODULE(osg python osg.i)
SWIG_LINK_LIBRARIES(osg ${SWIGLINKLIBS})

SWIG_ADD_MODULE(osgUtil python osgUtil.i)
SWIG_LINK_LIBRARIES(osgUtil ${SWIGLINKLIBS} ${OSGUTIL_LIBRARY})

SWIG_ADD_MODULE(osgManipulator python osgManipulator.i)
SWIG_LINK_LIBRARIES(osgManipulator ${SWIGLINKLIBS} ${OSGUTIL_LIBRARY} ${OSGGA_LIBRARY} ${OSGMANIPULATOR_LIBRARY})

SWIG_ADD_MODULE(osgFX python osgFX.i)
SWIG_LINK_LIBRARIES(osgFX ${SWIGLINKLIBS} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGFX_LIBRARY})

SWIG_ADD_MODULE(osgDB python osgDB.i)
SWIG_LINK_LIBRARIES(osgDB ${SWIGLINKLIBS} ${OSGDB_LIBRARY})

SWIG_ADD_MODULE(osgGA python osgGA.i)
SWIG_LINK_LIBRARIES(osgGA ${SWIGLINKLIBS} ${OSGGA_LIBRARY})

SWIG_ADD_MODULE(osgViewer python osgViewer.i)
SWIG_LINK_LIBRARIES(osgViewer ${SWIGLINKLIBS} ${OSGGA_LIBRARY} ${OSGVIEWER_LIBRARY})

SWIG_ADD_MODULE(osgText python osgText.i)
SWIG_LINK_LIBRARIES(osgText ${SWIGLINKLIBS} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY})

IF(BUILD_WITH_OSGART)
	INCLUDE_DIRECTORIES(
		${OSGART_INCLUDE_DIR}
	)
	
	SET_SOURCE_FILES_PROPERTIES(
		osgART.i
		PROPERTIES CPLUSPLUS TRUE)
		
	SWIG_ADD_MODULE(osgART python osgART.i)		
	SWIG_LINK_LIBRARIES(osgART ${SWIGLINKLIBS} ${OSGART_LIBRARY} ${OSGDB_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGGA_LIBRARY} )
	
	# OSGSWIG_ADD_MODULE(osgART python ${SWIGLINKLIBS} ${OSGART_LIBRARY} ${OSGGA_LIBRARY})
ENDIF(BUILD_WITH_OSGART)

